# open-api/immich-openapi-specs.json
@@ -7831,13 +7831,6 @@
               "type": "string"
             },
             "type": "array"
-          },
-          "trashReason": {
-            "enum": [
-              "deleted",
-              "offline"
-            ],
-            "type": "string"
           }
         },
         "required": [
@@ -8375,6 +8368,9 @@
           "isFavorite": {
             "type": "boolean"
           },
+          "isOffline": {
+            "type": "boolean"
+          },
           "isTrashed": {
             "type": "boolean"
           },
@@ -8439,10 +8435,6 @@
             "nullable": true,
             "type": "string"
           },
-          "trashReason": {
-            "nullable": true,
-            "type": "string"
-          },
           "type": {
             "$ref": "#/components/schemas/AssetTypeEnum"
           },
@@ -8468,6 +8460,7 @@
           "id",
           "isArchived",
           "isFavorite",
+          "isOffline",
           "isTrashed",
           "localDateTime",
           "originalFileName",
@@ -9818,6 +9811,9 @@
             "type": "boolean"
           },
           "isNotInAlbum": {
+            "type": "boolean"
+          },
+          "isOffline": {
             "type": "boolean"
           },
           "isVisible": {
@@ -11304,6 +11300,9 @@
             "type": "boolean"
           },
           "isNotInAlbum": {
+            "type": "boolean"
+          },
+          "isOffline": {
             "type": "boolean"
           },
           "isVisible": {
